# aiogram-bot-template

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routers/: __init__.py  root_router.py  webhook_router.py
src/common/: __init__.py  constants.py  environment.py
src/data/: __init__.py  loader.py  settings.py
src/filters/: __init__.py  is_private_message.py
src/handlers/: __init__.py
src/handlers/private/: __init__.py  start.py
src/handlers/root/: __init__.py  start.py
src/handlers/user/: __init__.py  info.py  start.py
src/keyboards/: __init__.py
src/keyboards/inline/: __init__.py  github_link_keyboard.py
src/keyboards/root/: __init__.py  inline.py
src/keyboards/user/: __init__.py  inline.py
src/middlewares/: __init__.py  throttling.py
src/misc/: __init__.py  commands.py
src/server/: __init__.py
src/utils/: __init__.py  commands.py
